# personas

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.mcp.yml  docker-compose.yml  package-lock.json  package.json  pnpm-workspace.yaml
docker/: .dockerignore  Dockerfile.node-mcp
docs/: architecture.md  gallery-publish-verification.md  gallery-publishing.md  hpersona-v2-format.md  install-persona-design.md  mcp-server-contract.md  mcp_portfolio_verification.md  persona-roadmap.md  production-readiness-plan.md  safety-guardrails.md  viral-persona-strategy.md
mcp-servers/04-mcp-researcher/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  package.json  pyproject.toml  server.json
mcp-servers/04-mcp-researcher/src/: arxiv.js  citations.js  index.js  index.py  paper-reader.js  tools.js  watsonx.js
mcp-servers/04-mcp-researcher/src/researcher/: __init__.py  arxiv_client.py  audit.py  config.py  models.py  paper_reader.py  pdf_guard.py  rate_limit.py  safety.py  server.py  source_policy.py  summarizer.py
mcp-servers/04-mcp-researcher/tests/: test_arxiv_client.py  test_paper_reader.py  test_pdf_guard.py  test_rate_limit.py  test_server_contract.py  test_source_policy.py  test_summarizer.py
mcp-servers/10-mcp-general-doctor/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  package.json  pyproject.toml  server.json
mcp-servers/10-mcp-general-doctor/src/: index.js  index.py  tools.js
mcp-servers/10-mcp-general-doctor/src/doctor/: __init__.py  audit.py  config.py  legacy_http.py  safety.py  schemas.py  server.py  upstream.py
mcp-servers/10-mcp-general-doctor/tests/: conftest.py  test_adversarial.py  test_audit.py  test_legacy_http.py  test_safety.py  test_server_contract.py  test_structured_signals.py  test_tool_structured.py  test_tools.py  test_upstream.py
registry/: registry.json
schemas/: agentic.schema.json  dependencies-a2a-agents.schema.json  dependencies-mcp-servers.schema.json  dependencies-models.schema.json  dependencies-suite.schema.json  dependencies-tools.schema.json  manifest.schema.json  persona-agent.schema.json  persona-appearance.schema.json  preview-card.schema.json
scripts/: README_avatars.md  backfill_sha256.py  build_hpersona.py  export_for_worker.py  generate_assets.py  generate_avatars_realistic.py  (+5 more)
(+234 files in other folders)
