[project]
name = "mcp-researcher"
version = "1.0.0"
description = "Python-native MCP server for academic research (arXiv search, paper reading, summaries, comparisons, literature briefs)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "HomePilot Team" }]
dependencies = [
    "mcp[cli]>=1.2.0",
    "arxiv>=2.1.3",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "pypdf>=4.3.1",
]

[project.optional-dependencies]
rag = [
    "chromadb>=0.5.0",
    "sentence-transformers>=2.7.0",
]
watsonx = [
    "ibm-watsonx-ai>=1.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
mcp-researcher = "researcher.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
