[project]
name = "mcp-general-doctor"
version = "1.0.0"
description = "Python-native MCP safety adapter for the General Doctor persona; calls medical-mcp-toolkit upstream and enforces the medical-ai-safety-policy."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "HomePilot Team" }]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    # Used by the optional legacy-http / hybrid transports (see
    # docs/medical/medical-ai-tool-policy.md and src/doctor/legacy_http.py).
    # Kept mandatory so a single `pip install .` is enough to flip transport
    # via env var without re-installing.
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
mcp-general-doctor = "doctor.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
